Update book layout

--- a/book.tex
+++ b/book.tex
@@ -1,7 +1,7 @@
 %% -*- Mode: LaTeX; Char-set: UTF-8; -*-
 %% Invitation to Algorithms with Scheme
 
-\documentclass[11pt,a4paper,openright,draft]{book}
+\documentclass[12pt,openright,draft]{book}
 
 %% ----- PACKAGES START ----- %%
 
@@ -15,6 +15,12 @@
 %% For putting quotations at the beginning of each chapter.
 %% \usepackage{epigraph}
 
+%% http://kb.mit.edu/confluence/x/8Z07
+%% For making the margins smaller.
+\usepackage[margin=0.75in]{geometry}
+
+%% For hyperlinks.
+%% TODO(rml): Add link targets to the document.
 \usepackage{hyperref}
 
 %% ----- PACKAGES END ----- %%
