Small edits to Appendices and Bibliography

--- a/book.tex
+++ b/book.tex
@@ -1326,18 +1326,18 @@ Add this to your bookmarks so you can refer back to it as needed.
 \appendix
 \chapter{Loading the book code into a Scheme}
 
-%% TODO(rml): Write this.  You'll need to standardize on an approach
-%% of some kind.
+%% TODO(rml): Write instructions for loading the book code into each
+%% of the supported Schemes.
 
 \backmatter{}
 \chapter{Bibliography}
 
 \begin{itemize}
-\item Abelson \& Sussman, \emph{Structure and Interpretation of Computer Programs}, 1st ed.
+\item Abelson \& Sussman, \emph{Structure and Interpretation of Computer Programs}, 1st ed., 1986.
 
-\item Winston \& Horn, \emph{Lisp}, X ed.
+\item Winston \& Horn, \emph{Lisp}, XXX.
 
-\item Gabriel, Performance and Evaluation of Lisp Systems
+\item Gabriel, \emph{Performance and Evaluation of Lisp Systems}, 1985.
 \end{itemize}
 
 \end{document}
