Tweak page margins

--- a/book.tex
+++ b/book.tex
@@ -17,7 +17,7 @@
 
 %% http://kb.mit.edu/confluence/x/8Z07
 %% For making the margins smaller.
-\usepackage[margin=0.75in]{geometry}
+\usepackage[left=0.618in,right=0.618in,top=1in,bottom=1in]{geometry}
 
 %% For hyperlinks.
 %% TODO(rml): Add link targets to the document.
