Add some (disabled) paragraph formatting code

--- a/book.tex
+++ b/book.tex
@@ -27,6 +27,16 @@
 
 %% Custom page layout
 
+%% https://en.wikibooks.org/wiki/LaTeX/Paragraph_Formatting
+
+%% TODO(rml): Figure out paragraph spacing and indentation.
+
+%% Don't indent new paragraphs as much.
+%% \setlength{\parindent}{0.2cm} % Default is 15pt.
+
+%% Add extra vertical space before each paragraph.
+%% \setlength{\parskip}{0.5cm plus4mm minus3mm}
+
 %% End custom page layout
 
 \begin{document}
