Ensure book uses UTF-8 character coding

--- a/book.tex
+++ b/book.tex
@@ -1,4 +1,4 @@
-%% -*- Mode: LaTeX; Char-set: UTF-8; -*-
+%% -*- Mode: LaTeX; Coding: utf-8; -*-
 %% Invitation to Algorithms with Scheme
 
 \documentclass[12pt,openright,draft]{book}
